# tls-proxy-checker

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  tls-proxy-checker-audit.spec  tls-proxy-checker.spec
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  diagnostic_result.yml
.github/workflows/: ci.yml  release.yml  verify-windows-release.yml
docs/: badssl-coverage.md  inspection-profiles.md  linux-release.md  windows-release.md
scripts/: build_linux_release.sh  build_release_metadata.py  check_glibc.py  collect_licenses.py  package_windows_release.ps1  run_linux_release_build.sh  verify_badssl.py  verify_release_version.py
src/tls_proxy_checker/: __init__.py  cli.py  profiles.py  security.py
tests/: badssl_cases.json  test_build_release_metadata.py  test_check_glibc.py  test_cli_helpers.py
