[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tls-proxy-checker"
version = "0.4.2"
description = "TLS proxy compatibility and certificate diagnostics CLI."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "EggertsIT" }]
keywords = ["tls", "ssl", "proxy", "certificate", "security", "cipher"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security :: Cryptography",
  "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
  "rich>=13.0.0",
  "pyOpenSSL>=26.0.0",
  "cryptography>=48.0.1",
]

[project.optional-dependencies]
build = [
  "build>=1.3.0",
  "pyinstaller>=6.8.0",
]
dev = [
  "pytest>=8.0.0",
  "bandit[toml]>=1.7.9",
  "pip-audit>=2.7.3",
]

[project.scripts]
tls-proxy-checker = "tls_proxy_checker.cli:main"

[project.urls]
Homepage = "https://github.com/EggertsIT/tls-proxy-checker"
Repository = "https://github.com/EggertsIT/tls-proxy-checker.git"
Issues = "https://github.com/EggertsIT/tls-proxy-checker/issues"
Changelog = "https://github.com/EggertsIT/tls-proxy-checker/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
